--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
 futures = "0.3.30"
 fantoccini = "0.21.0"
 serde_json = "1.0.120"
-sdl2 = "0.37.0"
+sdl2 = { version = "0.37.0", features = ["ttf"] }
+
